k8s-net/main.tf
resource "aws_vpc" "k8s_net" {
  cidr_block       = "192.168.0.0/16"

  tags = {
    Name = "K8s-NET"
  }
}
